--- a/index.html
+++ b/index.html
@@ -53,16 +53,26 @@
             </div>
         </main>
 
-        <aside id="info">
+        <aside>
             <div id="infoscreen">
-                <p><br>
-                    Hay una gran flor en la espalda de Venusaur. Se dice que la flor es de colores vívidos si obtiene
-                    suficiente nutrición y luz solar. El olor de esa flor, sirve para calmar las emociones de las
-                    personas.
+                <p class="blue-text">778 - Mimikyu:</p>
+                <p> 'Mimikyu', 'Hada', '0.2m', '0.7kg', 'Vive toda su vida oculto bajo su saco con garabatos dibujados en él pero al atacar saca su garra por debajo de esta. Cuentan que si alguien viera su aspecto real, sería víctima de una rara enfermedad.
                 </p>
             </div>
-            <div id="right-buttons">
-
+            <div>
+                <label for="region">Region:</label>
+                <select id="region">
+                    <option value="all">Cargando...</option>
+                </select>
+            </div>
+            <div>
+                <label for="type">Type:</label>
+                <select id="type">
+                    <option value="all">All</option>
+                    <option value="Planta">Planta</option>
+                    <option value="Eléctrico">Eléctrico</option>
+                    <!-- Add more options as needed -->
+                </select>
             </div>
 
         </aside>
