Linked screen and data. Region data missing.

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div id="pokescreen">
                 <div class="gray-border">
                     <div id="display">
-                        <img src="src/img/mimikyu.png" alt="fotografía" id="pokepic" />
-                        <p>Altura: Peso:</p>
+                        <img src="src/img/Pokebola.png" alt="fotografía" id="pokepic" />
+                        <p id="health">POKEDEX</p>
                         <div class="display-divs">
-                            <div class="inline-div" id="dis-reg">REGIÓN</div>
-                            <div class="inline-div" id="dis-type">TIPO</div>
+                            <div class="inline-div hidden" id="dis-reg">REGIÓN</div>
+                            <div class="inline-div hidden" id="dis-type">TIPO</div>
                         </div>
                     </div>
                 </div>
@@ -55,11 +55,9 @@
 
         <aside>
             <div id="infoscreen">
-                <p class="blue-text">778 - Mimikyu:</p>
-                <p> 'Mimikyu', 'Hada', '0.2m', '0.7kg', 'Vive toda su vida oculto bajo su saco con garabatos dibujados
-                    en él pero al atacar saca su garra por debajo de esta. Cuentan que si alguien viera su aspecto real,
-                    sería víctima de una rara enfermedad.
-                </p>
+                <p class="blue-text"></p>
+                <p> ¡Bienvenido al Pokedex! <br>
+                    Selecciona el tipo o región para ver los Pokemon.</p>
             </div>
             <div class="option-holder">
                 <div class="blue-button">
