--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="site-container">
         <header>
             <h1>B I E N V E N I D O</h1>
-            <p>Click en el pokedex para buscar</p>
+            <p>Inspecciona el pokedex. Que te diviertas!</p>
             <nav>
 
             </nav>
