--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta author="Xarenmi">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./src/img/favicon.ico" type="image/x-icon">
     <script type="module" src="./src/script.js"></script>
     <title>POKEFAVS</title>
 </head>
