Thinking of functionalities for empty buttons

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
                     </select>
                 </div>
                 <div class="blue-button">
+                    
                 </div>
                 <div class="blue-button">
+                    <!--<p>APAGAR</p>-->
                 </div>
             </div>
         </aside>
